[[bin]]
name = "iam_getting_started"
path = "src/bin/iam-getting-started.rs"

[package]
name = "iam-code-examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>", "Doug Schwartz <dougsch@amazon.com"]
edition = "2021"
description = "Example usage of the IAM service"
publish = false

[lib]
name = "iam_service"
path = "src/iam-service-lib.rs"

[dependencies]
tower-service = "0.3.2"
http = "0.2.8"

[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.0.0-smithy-rs-head"

[dependencies.aws-credential-types]
features = ["hardcoded-credentials"]
path = "../../sdk/aws-credential-types"
version = "0.0.0-smithy-rs-head"

[dependencies.aws-hyper]
path = "../../sdk/aws-hyper"
version = "0.0.0-smithy-rs-head"

[dependencies.aws-sdk-iam]
path = "../../sdk/iam"
version = "0.48.0"

[dependencies.aws-sdk-s3]
path = "../../sdk/s3"
version = "0.48.0"

[dependencies.aws-sdk-sts]
path = "../../sdk/sts"
version = "0.48.0"

[dependencies.aws-smithy-client]
features = ["test-util"]
path = "../../sdk/aws-smithy-client"
version = "0.0.0-smithy-rs-head"

[dependencies.aws-smithy-http]
path = "../../sdk/aws-smithy-http"
version = "0.0.0-smithy-rs-head"

[dependencies.aws-types]
path = "../../sdk/aws-types"
version = "0.0.0-smithy-rs-head"

[dependencies.sdk-examples-test-utils]
path = "../test-utils"
version = "0.1.0"

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]
