[package]
name = "kms-code-examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>", "Doug Schwartz <dougsch@amazon.com"]
edition = "2018"
description = "Example usage of the KMS service"

[dependencies]
aws-config = { path = "../../sdk/aws-config" }
kms = { package = "aws-sdk-kms", path = "../../sdk/kms" }
aws-hyper = { path = "../../sdk/aws-hyper" }
aws-types = { path = "../../sdk/aws-types" }
tokio = { version = "1", features = ["full"]}
structopt = { version = "0.3", default-features = false }
base64 = "0.13.0"
tracing-subscriber = { version = "0.2.16", features = ["fmt"] }
