[package]
name = "kms-code-examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>", "Doug Schwartz <dougsch@amazon.com"]
edition = "2018"
description = "Example usage of the KMS service"
publish = false

[dependencies]
base64 = "0.13.0"

[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.14.0"

[dependencies.aws-sdk-kms]
path = "../../sdk/kms"
version = "0.14.0"

[dependencies.aws-smithy-client]
features = ["client-hyper", "rustls", "rt-tokio"]
path = "../../sdk/aws-smithy-client"
version = "0.44.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.5"
features = ["env-filter"]
