[package]
name = "lambda-code-examples"
version = "0.1.0"
authors = ["Richard H. Boyd <rhboyd@amazon.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { path = "../../sdk/aws-config" }
ec2 = { package = "aws-sdk-ec2", path = "../../sdk/ec2" }
lambda = { package = "aws-sdk-lambda", path = "../../sdk/lambda" }
aws-types = { path = "../../sdk/aws-types" }
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.2.16", features = ["fmt"] }
