[package]
name = "lambda-code-examples"
version = "0.1.0"
authors = ["Richard H. Boyd <rhboyd@amazon.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"
publish = false

[dependencies]
env_logger = "0.9.0"
lambda_runtime = "0.4"
log = "0.4"
time = "0.3"

[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.14.0"

[dependencies.aws-sdk-ec2]
path = "../../sdk/ec2"
version = "0.14.0"

[dependencies.aws-sdk-lambda]
path = "../../sdk/lambda"
version = "0.14.0"

[dependencies.aws-sdk-s3]
path = "../../sdk/s3"
version = "0.14.0"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.5"
features = ["env-filter"]
