[package]
name = "localstack-example"
version = "0.1.0"
authors = ["Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"
publish = false

[dependencies]
http = "0.2"

[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.14.0"

[dependencies.aws-sdk-s3]
path = "../../sdk/s3"
version = "0.14.0"

[dependencies.aws-sdk-sqs]
path = "../../sdk/sqs"
version = "0.14.0"

[dependencies.aws-types]
path = "../../sdk/aws-types"
version = "0.14.0"

[dependencies.aws-smithy-http]
path = "../../sdk/aws-smithy-http"
version = "0.44.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.5"
features = ["env-filter"]
