[package]
name = "localstack-example"
version = "0.1.0"
authors = ["Doug Schwartz <dougsch@amazon.com>"]
edition = "2021"
publish = false

[dependencies]
http = "0.2"

[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.0.0-smithy-rs-head"

[dependencies.aws-sdk-s3]
path = "../../sdk/s3"
version = "0.52.0"

[dependencies.aws-sdk-sqs]
path = "../../sdk/sqs"
version = "0.52.0"

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]
