[package]
name = "rds-code-examples"
authors = ["LMJW <heysuperming@gmail.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { path = "../../sdk/aws-config" }
aws-types = { path = "../../sdk/aws-types" }
aws-sdk-rds = { path = "../../sdk/rds" }
structopt = { version = "0.3", default-features = false }
tokio = {version = "1", features = ["full"]}
tracing-subscriber = { version = "0.2.16", features = ["fmt"] }
