[package]
name = "rdsdata-code-examples"
authors = ["LMJW <heysuperming@gmail.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2018"
version = "0.1.0"
publish = false
[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.14.0"

[dependencies.aws-sdk-rdsdata]
path = "../../sdk/rdsdata"
version = "0.14.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.5"
features = ["env-filter"]
