[[bin]]
name = "s3_getting_started"
path = "src/bin/s3-getting-started.rs"

[package]
name = "s3_code_examples"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>", "Doug Schwartz <dougsch@amazon.com>"]
edition = "2021"
publish = false

[lib]
name = "s3_service"
path = "src/s3-service-lib.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[dependencies]
bytes = "0.4.12"
http = "0.2.8"
http-body = "0.4.5"
md-5 = "0.10.1"
rand = "0.5.0"
thiserror = "1.0"
tokio-stream = "0.1.8"
tracing = "0.1.37"

[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.0.0-smithy-rs-head"

[dependencies.aws-endpoint]
path = "../../sdk/aws-endpoint"
version = "0.0.0-smithy-rs-head"

[dependencies.aws-sdk-s3]
path = "../../sdk/s3"
version = "0.32.0"

[dependencies.aws-smithy-http]
features = ["rt-tokio"]
path = "../../sdk/aws-smithy-http"
version = "0.0.0-smithy-rs-head"

[dependencies.aws-smithy-types]
path = "../../sdk/aws-smithy-types"
version = "0.0.0-smithy-rs-head"

[dependencies.futures-util]
version = "0.3.21"
features = ["alloc"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.5"
features = ["env-filter"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]
